--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ sitemap:
 				<!-- Intro -->
 					<div id="intro">
             <h1>{{site.title}}</h1>
-						<h2>Wedding website coming soon</h2>
+						<h2>Wedding website coming soon 🍕🍕</h2>
 						<p>We're excited but still figuring things out.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
@@ -53,9 +53,9 @@ sitemap:
 							<article class="post featured">
 								<header class="major">
 									<h2>December 27th, 2019</h2>
-									<p>At Local 61 in Brooklyn</p>
+									<p>At Local 61 in Brooklyn. 7 PM</p>
 								</header>
-								Drinks, light refreshments and a <a href="https://en.wikipedia.org/wiki/Cookie_table">cookie table.</a>
+								Drinks, small bites and a <a href="https://en.wikipedia.org/wiki/Cookie_table">cookie table.</a>
 
 							</article>
 
