basic content and information.

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@ sitemap:
 				<!-- Intro -->
 					<div id="intro">
             <h1>{{site.title}}</h1>
-						<h2>Wedding website coming soon 🍕🍕</h2>
-						<p>We're excited but still figuring things out.</p>
+						<h2>December 27, 2019</h2>
+						<p>🍕🍕</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -50,13 +50,74 @@ sitemap:
 				<!-- Main -->
 					<div id="main">
 						<!-- Featured Post -->
-							<article class="post featured">
+							<article>
 								<header class="major">
-									<h2>December 27th, 2019</h2>
-									<p>At Local 61 in Brooklyn. 7 PM</p>
+									<h2>Schedule</h2>
 								</header>
-								Drinks, small bites and a <a href="https://en.wikipedia.org/wiki/Cookie_table">cookie table.</a>
 
+								December 27th, 2019<br />
+								<br />
+								
+								<strong>10 AM</strong><br />
+
+								Ceremony, at NYC Marriage Bureau <br />
+								141 Worth Stret, New York. <br />
+								
+								Family only, lunch to follow.<br />
+								<br />
+
+
+								<strong>7 PM - 10 PM</strong><br />
+								Reception at <a href="https://goo.gl/maps/yeJzMrefMGe4rcPF8">61 Local</a> <br />
+								Upstairs event space<br />
+								<br />
+
+								Attire: Dressy Casual <br />
+
+								Drinks, small bites and a <a href="https://en.wikipedia.org/wiki/Cookie_table">cookie table.</a>
+							</article>
+							<article>
+								<header class="major">
+									<h2>Accomodations</h2>
+								</header>
+
+								<p>
+								The reception is in the Cobble Hill neighborhood, and there are many hotels in Downtown Brooklyn a short walk or subway ride away. 
+								</p>
+
+								<p>
+								We don't have an official hotel, but happy to give neighborhood or transit advice. 
+							    </p>
+
+								<strong>A few nearby places:</strong><br/>
+								Hilton Brooklyn New York<br/>
+								NU Hotel Brooklyn<br/>
+								Hotel Indigo BROOKLYN<br/>
+
+							</article>
+
+							<article>
+								<header class="major">
+									<h2>Gifts</h2>
+								</header>
+
+								We appreciate your generosity, but our household is pretty complete. If you feel the need to mark the occasion, we would appreciate donations 
+								to either of the following non-profits on our behalf, but no contributions are expected.
+								<br/> <br/> 
+
+								<p>
+	 								<a href="https://maketheroadny.org/">
+	 									Make the Road New York
+	 								</a>	
+									builds the power of immigrant and working class communities to achieve dignity and justice.
+								</p>	
+
+								<p>
+									<a href="https://support.conservationfund.org/site/Donation2;jsessionid=00000000.app214a?idb=0&df_id=1400&1400.donation=form1&mfc_pref=T&NONCE_TOKEN=3DAC02FFEDA902CCEC6B7C12B6529EA8">
+									  The Conservation Fund
+									</a>	  
+	                                protects America’s legacy of land and water resources through land acquisition, sustainable community and economic development, and leadership training.
+                                </p>
 							</article>
 
 						<!-- Posts -->
