--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@ sitemap:
 				<!-- Main -->
 					<div id="main">
 						<!-- Featured Post -->
+						   <article>
+								<img src="{{ "/assets/images/nice.jpg" | absolute_url }}" class="image heads" />
+							</article>	
 							<article>
 								<header class="major">
 									<h2>Schedule</h2>
